refactor(Cars): toList()로 간결히 표현